Closed Bug 1820265 Opened 3 years ago Closed 2 years ago

WPT overflow-clip-margin-007.html fails in Firefox, when content-visibility pref is enabled

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
119 Branch
Tracking Status
firefox119 --- fixed

People

(Reporter: dholbert, Assigned: cathiechen)

References

(Depends on 1 open bug, Blocks 1 open bug)

Details

Attachments

(1 file)

STR:

  1. Enable about:config pref layout.css.content-visibility.enabled
  2. Visit this WPT test:
    https://wpt.live/css/css-overflow/overflow-clip-margin-007.html
  3. Compare the rendering to reference-case:
    https://wpt.live/css/css-overflow/overflow-clip-margin-007-ref.html

EXPECTED RESULTS:
Consistent rendering between testcase and reference.

ACTUAL RESULT:
There are two differences:
(A) Testcase renders blank (whereas the reference case has a green strip).
(B) Testcase's scroll position seems different from the reference case (i.e. the reference case has a further overall height)

Difference (A) seems to be an invalidation bug of some sort. It goes away (i.e. we paint the green strip) if you click the testcase or do Ctrl+A to select all.

Difference (B) seems to be a broader difference, where we actually disagree with Chromium and WebKit on the document.documentElement.scrollHeight of the reference case (though we agree with them on the testcase when the content-visibility pref is enabled). That's not directly related to content-visibility, I think, so I'll spin of a dedicated bug for that behavior difference.

(In reply to Daniel Holbert [:dholbert] from comment #0)

Difference (B) seems to be a broader difference [...] I'll spin of a dedicated bug for that behavior difference.

I filed bug 1820266 on that.

Depends on: 1820266
Severity: -- → S3
Assignee: nobody → cathiechen
Status: NEW → ASSIGNED
Attachment #9345110 - Attachment description: Bug 1820265 - WPT overflow-clip-margin-007.html fails in Firefox, when content-visibility pref is enabled, r?emilio → Bug 1820265 - content-visibility: use overflow clip edge instead of bounding box as the intersecting rect, r?emilio
Pushed by surkov.alexander@gmail.com: https://hg.mozilla.org/integration/autoland/rev/cd564dee524a content-visibility: use overflow clip edge instead of bounding box as the intersecting rect, r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/41923 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 119 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: