Bug 1820265 - content-visibility: use overflow clip edge instead of bounding box as the intersecting rect, r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D184253